# object-storage-api

./: .env.docker.example  .env.example  .env.minio.example  .gitignore  Dockerfile  README.md  compose.yaml  compose.yml  config.py  minio_api.py  pyproject.toml  pytest.ini  requirements.txt  s3_api.py  service.py  storage_base.py  storage_factory.py
env_examples/: .env.aws.example  .env.nebius.example
k8s/: deployment.yaml.example  kompose.yaml.example  secret.yaml.example  service.yaml.example
tests/: conftest.py  test_config.py  test_s3_api.py  test_service.py  test_storage_base.py  test_storage_factory.py
