[project]
name = "object-storage-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "minio>=7.2.15",
    "pre-commit>=4.1.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
